[b]Version 0.6.4[/b]:

(2008-10-22)
 * (Linux) Now smplayer will pop up a warning if the mplayer version is old.
   This popup will appear only once, although there'll be a reminder in the
   status line.
   A mplayer is considered old if it's older than svn r25158 (that includes
   1.0rc2)

(2008-10-21)
 * Now if the SSA/ASS lib is enabled and a file named styles.ass exists in the 
   smplayer config directory ($HOME/.smplayer/ or the application directory if 
   compiled with PORTABLE_APP) smplayer will load it (mplayer option 
   -ass-styles). In this case the color for subtitles and styles configured
   in Preferences->Subtitles WON'T be used.
   In the future smplayer will create that file automatically and the 
   preferences dialog will allow to configure all (or at least the most 
   important) styles.

(2008-10-20)
 * Bugfix: the show equalizer option didn't work when assigned to any of
   the mouse buttons. (Reason: the action name was changed some time ago
   from "equalizer" to "video_equalizer)
 * Added "Show audio equalizer" to the mouse buttons' combos too.

(2008-10-19)
 * (Experimental) Added the possibility to change the video track.
   Only tested with this sample video: http://www.megaupload.com/?d=3GAGZCTP

(2008-10-16)
 * Moved the comboboxes for the video & audio drivers to the Video and Audio
   tabs.
 * Added a new section in the preferences dialog: Playlist.

(2008-10-15)
 * Added the possibility to add consecutive files (video_01.avi, 
   video_02.avi..) to the playlist. This feature is controlled by the option 
   add_to_playlist_consecutive_files (under the [gui] section).
 * Now the available tracks in DVDs, CDs and VCDs won't be automatically added
   to the playlist if the option gui/auto_add_to_playlist is false. Should fix 
   bug #2049998.

(2008-10-14)
 * Logout is not cancelled by smplayer. Fixes bug #2155555.
 * Now the options in preferences display a tooltip with a help message.